docs: use bottom.pages.dev
This _might_ stick, this might not. I may only do this after releasing
one more stable version. We'll see.

--- a/wix/main.wxs
+++ b/wix/main.wxs
@@ -218,7 +218,7 @@
         <!--<Icon Id='ProductICO' SourceFile='wix\Product.ico'/>-->
         <!--<Property Id='ARPPRODUCTICON' Value='ProductICO' />-->
 
-        <Property Id='ARPHELPLINK' Value='https://clementtsang.github.io/bottom/stable'/>
+        <Property Id='ARPHELPLINK' Value='https://bottom.pages.dev/stable'/>
         
         <UI>
             <UIRef Id='WixUI_FeatureTree'/>
